--- a/web/codegen.yaml
+++ b/web/codegen.yaml
@@ -20,8 +20,7 @@ generates:
       documentMode: graphQLTag
 
   src/graphql/generated/page.tsx:
-    # documents: './src/graphql/private/**/*.graphql'
-    documents: './src/graphql/**/*.graphql'
+    documents: './src/graphql/private/**/*.graphql'
     config:
       documentMode: external
       importDocumentNodeExternallyFrom: ./graphql
@@ -36,18 +35,18 @@ generates:
     plugins:
       - 'graphql-codegen-apollo-next-ssr'
 
-  # src/graphql/generated/pagePublic.tsx:
-  #   documents: './src/graphql/public/**/*.graphql'
-  #   config:
-  #     documentMode: external
-  #     importDocumentNodeExternallyFrom: ./graphql
-  #     reactApolloVersion: 3
-  #     withHooks: true
-  #     contextType: 'ApolloClientContext'
-  #     contextTypeRequired: true
-  #     apolloClientInstanceImport: '../../lib/withPublicApollo'
-  #   preset: import-types
-  #   presetConfig:
-  #     typesPath: ./graphql
-  #   plugins:
-  #     - 'graphql-codegen-apollo-next-ssr'
+  src/graphql/generated/pagePublic.tsx:
+    documents: './src/graphql/public/**/*.graphql'
+    config:
+      documentMode: external
+      importDocumentNodeExternallyFrom: ./graphql
+      reactApolloVersion: 3
+      withHooks: true
+      contextType: 'ApolloClientContext'
+      contextTypeRequired: true
+      apolloClientInstanceImport: '../../lib/withPublicApollo'
+    preset: import-types
+    presetConfig:
+      typesPath: ./graphql
+    plugins:
+      - 'graphql-codegen-apollo-next-ssr'
